Fixed switches on smaller screens

--- a/src/assets/scss/elements/_toggleSwitch.scss
+++ b/src/assets/scss/elements/_toggleSwitch.scss
@@ -62,6 +62,14 @@ input:checked + .slider:before {
 	-ms-transform: translateX(24px);
 	-moz-transform: translateX(24px);
 	-webkit-transform: translateX(24px);
+	
+	@include media-breakpoint-down(sm) {
+        transform: translateX(18px);
+    	-o-transform: translateX(18px);
+    	-ms-transform: translateX(18px);
+    	-moz-transform: translateX(18px);
+    	-webkit-transform: translateX(18px);
+    }
 }
 
 input + .slider.off:before {
@@ -74,8 +82,16 @@ input + .slider.off:before {
 	
 .slider.round {
 	border-radius: calculateRem(34px);
+	
+	@include media-breakpoint-down(sm) {
+		border-radius: calculateRem(24px);
+	}
 }
 	
 .slider.round:before {
 	border-radius: 50%;
+	
+	@include media-breakpoint-down(sm) {
+        border-radius: 45%;
+	}
 }
